color cols added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
   </head>
   <body>
     <header style="text-align: center; font-size: 40px;">Welcome To My Portfolio Page</header>
+    <footer>
+      <section class="colors-container">
+        <div class="colors" id="col1">Buttons</div>
+        <div class="colors" id="col2">Headers/Footers</div>
+        <div class="colors" id="col3">info boards</div>
+        <div class="colors" id="col4"></div>
+        <div class="colors" id="col5"></div>
+      </section>
+    </footer>
     <script src="./index.js"></script>
   </body>
 </html>
