--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@
         <a id="profile-link" target="_blank" href="https://github.com/Jahazielvaz">Github</a>
       </nav>
     </header>
+
+    <!-- Hamburger Nav -->
+    <nav id="nav2">
+      <svg width="30px" height="30px" style="border: 2px solid red;">
+        <path d="M0, 5 30 5" />
+      </svg>
+      <a href="#welcome-section">Home</a>
+      <a href="#projects">Projects</a>
+      <a href="#signup">Log In/Sign Up</a>
+      <a id="profile-link" target="_blank" href="https://github.com/Jahazielvaz">Github</a>
+    </nav>
     <!-- Welcome Section -->
     <section id="welcome-section">
       <h1>Welcome</h1>
